[package]
name = "native-staking-program"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
borsh = "0.9.3"
mpl-token-metadata = "1.3.6"
solana-program = "1.11.10"
spl-token = "3.5.0"
thiserror = "1.0.34"
